updated docker build